# book-tracker

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  books.db  compile_commands.json
src/: bookinfoinputwidget.cpp  bookinfoinputwidget.hpp  bookinfoinputwidget.ui  booksmodel.cpp  booksmodel.hpp  booksproxymodel.cpp  booksproxymodel.hpp  defs.hpp  editablemodel.cpp  editablemodel.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  query.hpp  util.hpp  vieweventfilter.cpp  vieweventfilter.hpp
